@@ -20,7 +20,6 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
@@ -173,7 +172,7 @@ public class Less {
             }
         } else if (new File("/usr/share/nano").exists() && !ignorercfiles) {
             PathMatcher pathMatcher = FileSystems.getDefault().getPathMatcher("glob:/usr/share/nano/*.nanorc");
-            try (Stream<Path> pathStream = Files.walk(Paths.get("/usr/share/nano"))) {
+            try (Stream<Path> pathStream = Files.walk(Path.of("/usr/share/nano"))) {
                 pathStream.filter(pathMatcher::matches).forEach(syntaxFiles::add);
                 nanorcIgnoreErrors = true;
             } catch (IOException e) {
@@ -1375,14 +1374,14 @@ public class Less {
                 if (terminalLine == 0 && offsetInLine > 0) {
                     off = Math.max(offsetInLine, off);
                 }
-                toDisplay = curLine.columnSubSequence(off, off + width, terminal);
+                toDisplay = curLine.columnSubSequence(terminal, off, off + width);
                 curLine = null;
             } else {
                 if (terminalLine == 0 && offsetInLine > 0) {
-                    curLine = curLine.columnSubSequence(offsetInLine, Integer.MAX_VALUE, terminal);
+                    curLine = curLine.columnSubSequence(terminal, offsetInLine, Integer.MAX_VALUE);
                 }
-                toDisplay = curLine.columnSubSequence(0, width, terminal);
-                curLine = curLine.columnSubSequence(width, Integer.MAX_VALUE, terminal);
+                toDisplay = curLine.columnSubSequence(terminal, 0, width);
+                curLine = curLine.columnSubSequence(terminal, width, Integer.MAX_VALUE);
                 if (curLine.length() == 0) {
                     curLine = null;
                 }
