@@ -12,7 +12,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Path;
 import java.util.function.Supplier;
 
 import org.jline.keymap.KeyMap;
@@ -27,14 +27,14 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Test for using Nano with configuration loaded from the classpath.
  */
-public class NanoClasspathConfigTest {
+class NanoClasspathConfigTest {
 
     /**
      * Test class that simulates a command-line tool using Nano with classpath configuration.
      */
     static class NanoCommand {
-        public Integer doCall() throws Exception {
-            Supplier<Path> workDir = () -> Paths.get(System.getProperty("user.dir"));
+        Integer doCall() throws Exception {
+            Supplier<Path> workDir = () -> Path.of(System.getProperty("user.dir"));
             try (Terminal terminal = createTestTerminal()) {
                 String[] argv = new String[] {"--ignorercfiles"}; // Ignore default config files
                 Options opt = Options.compile(Nano.usage()).parse(argv);
@@ -67,7 +67,7 @@ public class NanoClasspathConfigTest {
 
     @Test
     @Timeout(1)
-    public void testNanoWithClasspathConfig() throws Exception {
+    void testNanoWithClasspathConfig() throws Exception {
         NanoCommand command = new NanoCommand();
         Integer result = command.doCall();
         assertEquals(0, result, "Command should execute successfully");
@@ -76,7 +76,7 @@ public class NanoClasspathConfigTest {
     /**
      * Helper method to get a Path from a classpath resource.
      */
-    static Path getResourcePath(String name) throws IOException, URISyntaxException {
+    private static Path getResourcePath(String name) throws IOException, URISyntaxException {
         return ClasspathResourceUtil.getResourcePath(name, NanoClasspathConfigTest.class);
     }
 }
