@@ -33,7 +33,7 @@ import org.jline.utils.AttributedStyle;
 import org.junit.jupiter.api.Test;
 
 @SuppressWarnings("removal")
-public class Issue1025 {
+class Issue1025 {
 
     private static void addInHeader(List<AttributedString> header, String text) {
         addInHeader(header, AttributedStyle.DEFAULT, text);
@@ -98,7 +98,7 @@ public class Issue1025 {
                 .defaultValue("John Doe")
                 // .mask('*')
                 .addCompleter(
-                        // new Completers.FilesCompleter(() -> Paths.get(System.getProperty("user.dir"))))
+                        // new Completers.FilesCompleter(() -> Path.of(System.getProperty("user.dir"))))
                         new StringsCompleter("Jim", "Jack", "John", "Donald", "Dock"))
                 .addPrompt();
 
@@ -197,15 +197,11 @@ public class Issue1025 {
         }
     }
 
-    public static class EofPipedInputStream extends InputStream {
+    static class EofPipedInputStream extends InputStream {
 
         private InputStream in;
 
-        public InputStream getIn() {
-            return in;
-        }
-
-        public void setIn(InputStream in) {
+        void setIn(InputStream in) {
             this.in = in;
         }
 
