@@ -28,7 +28,7 @@ import org.jline.utils.AttributedStyle;
 import org.jline.utils.OSUtils;
 
 @SuppressWarnings("removal")
-public class Basic {
+class Basic {
 
     private static void addInHeader(List<AttributedString> header, String text) {
         addInHeader(header, AttributedStyle.DEFAULT, text);
@@ -77,7 +77,7 @@ public class Basic {
                     .defaultValue("John Doe")
                     // .mask('*')
                     .addCompleter(
-                            // new Completers.FilesCompleter(() -> Paths.get(System.getProperty("user.dir"))))
+                            // new Completers.FilesCompleter(() -> Path.of(System.getProperty("user.dir"))))
                             new StringsCompleter("Jim", "Jack", "John", "Donald", "Dock"))
                     .addPrompt();
 
