@@ -8,12 +8,12 @@
  */
 package org.jline.terminal.impl.ffm;
 
-import java.io.FileDescriptor;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.nio.charset.Charset;
@@ -23,7 +23,6 @@ import org.jline.terminal.Size;
 import org.jline.terminal.Terminal;
 import org.jline.terminal.TerminalBuilder;
 import org.jline.terminal.impl.PosixPtyTerminal;
-import org.jline.terminal.impl.PosixSysTerminal;
 import org.jline.terminal.spi.Pty;
 import org.jline.terminal.spi.SystemStream;
 import org.jline.terminal.spi.TerminalProvider;
@@ -32,10 +31,18 @@ import org.jline.utils.Signals;
 
 public class FfmTerminalProvider implements TerminalProvider {
 
+    @SuppressWarnings("restricted")
     public FfmTerminalProvider() {
-        if (!FfmTerminalProvider.class.getModule().isNativeAccessEnabled()) {
+        // Probe restricted FFM access so the provider fails at load time
+        // when native access is denied (JDK 26+), rather than later during use.
+        // On JDK 24-25, this succeeds with a JVM warning.
+        try {
+            MemorySegment.NULL.reinterpret(0);
+        } catch (UnsupportedOperationException | IllegalCallerException e) {
             throw new UnsupportedOperationException(
-                    "Native access is not enabled for the current module: " + FfmTerminalProvider.class.getModule());
+                    "FFM native access is not available. Use --enable-native-access=ALL-UNNAMED or"
+                            + " --enable-native-access=org.jline.terminal.ffm to enable it.",
+                    e);
         }
     }
 
@@ -57,13 +64,13 @@ public class FfmTerminalProvider implements TerminalProvider {
      *
      * @param name            terminal name or identifier
      * @param type            terminal type (TERM)
-     * @param ansiPassThrough if true, pass ANSI/VT sequences through without filtering
+     * @param ansiPassThrough ignored on POSIX — only used on Windows
      * @param encoding        overall character set for the terminal
      * @param inputEncoding   character set used for input decoding
      * @param outputEncoding  character set used for output encoding
      * @param nativeSignals   if true, attempt to use native signal handling when available
      * @param signalHandler   handler invoked for terminal signals
-     * @param paused          if true, create the terminal in a paused state (input/output suspended)
+     * @param paused          ignored on POSIX — only used on Windows and PTY-backed terminals
      * @param systemStream    which system stream this terminal should be associated with
      * @return a Terminal instance bound to the specified system stream (or an equivalent PTY-backed terminal)
      * @throws IOException if the native PTY or system terminal cannot be created or accessed
@@ -95,18 +102,16 @@ public class FfmTerminalProvider implements TerminalProvider {
                     signalHandler,
                     paused);
         } else {
-            Pty pty = new FfmNativePty(
+            return new FfmUnixSysTerminal(
                     this,
                     systemStream,
-                    -1,
-                    null,
-                    0,
-                    FileDescriptor.in,
-                    systemStream == SystemStream.Output ? 1 : 2,
-                    systemStream == SystemStream.Output ? FileDescriptor.out : FileDescriptor.err,
-                    CLibrary.ttyName(0));
-            return new PosixSysTerminal(
-                    this, name, type, pty, encoding, inputEncoding, outputEncoding, nativeSignals, signalHandler);
+                    name,
+                    type,
+                    encoding,
+                    inputEncoding,
+                    outputEncoding,
+                    nativeSignals,
+                    signalHandler);
         }
     }
 
